--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "@angular/platform-browser": "^6.0.0",
     "@angular/platform-browser-dynamic": "^6.0.0",
     "@angular/router": "^6.0.0",
+    "angularfire2": "^5.0.0-rc.11",
     "bootstrap": "^4.1.1",
     "core-js": "^2.5.4",
+    "firebase": "^5.2.0",
     "hammerjs": "^2.0.8",
     "rxjs": "^6.0.0",
     "zone.js": "^0.8.26"
