--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "angularfire2": "^5.0.0-rc.11",
     "bootstrap": "^4.1.1",
     "core-js": "^2.5.4",
+    "cors": "^2.8.4",
     "express": "^4.16.3",
     "firebase": "^5.2.0",
     "hammerjs": "^2.0.8",
