--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "citymax",
-  "short_name": "citymax",
+  "name": "CitiMax",
+  "short_name": "CitiMax",
   "theme_color": "#1976d2",
   "background_color": "#fafafa",
   "display": "standalone",
