chat component added

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "CitiMax",
+  "name": "CitiMax Enterprises",
   "short_name": "CitiMax",
   "theme_color": "#1976d2",
   "background_color": "#fafafa",
