--- a/package.json
+++ b/package.json
@@ -24,16 +24,17 @@
     "@angular/platform-browser-dynamic": "^6.0.0",
     "@angular/pwa": "^0.6.0",
     "@angular/router": "^6.0.0",
+    "@angular/service-worker": "^6.0.0",
     "angularfire2": "^5.0.0-rc.11",
     "bootstrap": "^4.1.1",
     "core-js": "^2.5.4",
     "cors": "^2.8.4",
+    "dialogflow": "^0.6.0",
     "express": "^4.16.3",
     "firebase": "^5.2.0",
     "hammerjs": "^2.0.8",
     "rxjs": "^6.0.0",
-    "zone.js": "^0.8.26",
-    "@angular/service-worker": "^6.0.0"
+    "zone.js": "^0.8.26"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.6.0",
