--- a/functions/package.json
+++ b/functions/package.json
@@ -9,6 +9,8 @@
     "logs": "firebase functions:log"
   },
   "dependencies": {
+    "cors": "^2.8.4",
+    "dialogflow": "^0.6.0",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "firebase-admin": "~6.0.0",
