--- a/functions/package.json
+++ b/functions/package.json
@@ -15,6 +15,7 @@
     "express": "^4.16.3",
     "firebase-admin": "~6.0.0",
     "firebase-functions": "^2.0.3",
+    "nodemailer": "^4.6.8",
     "request": "^2.88.0"
   },
   "private": true
