--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "dialogflow": "^0.6.0",
     "express": "^4.16.3",
     "firebase": "^5.2.0",
+    "firebaseui": "^3.4.1",
     "hammerjs": "^2.0.8",
     "rxjs": "^6.0.0",
     "uuid": "^3.3.2",
