--- a/angular.json
+++ b/angular.json
@@ -25,6 +25,7 @@
             ],
             "styles": [
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "node_modules/firebaseui/dist/firebaseui.css",
               "src/styles.css"
             ],
             "scripts": []
